--- a/site/index.html
+++ b/site/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Maroc-Regarder des séries TV en ligne, Regarder des films en ligne</title>
-    <!-- <a href="https://iconscout.com/icons/netflix" target="_blank">Netflix Logo Flat  Logo Icon</a> by <a href="https://iconscout.com/contributors/pixel-icons">Pixel Icons</a> on <a href="https://iconscout.com">Iconscout</a> -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="icon" href="./img/netflix-logo.svg">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -39,15 +37,17 @@
                     </div>
                 </nav>
 
-                <div class="description" data-aos="fade-left" data-aos-duration="3000">
+                <div class="description">
                     <div class="text">
                         <h1>Films, séries TV et bien plus en illimité.</h1>
                         <p class="first">Où que vous soyez. Annulez à tout moment.</p>
                         <p class="second">
-                            Prêt à regarder Netflix ? Saisissez votre adresse e-mail pour vous abonner ou réactiver votre abonnement.
+                            Prêt à regarder Netflix ? Saisissez votre adresse e-mail pour vous abonner ou réactiver
+                            votre abonnement.
                         </p>
                         <div class="input-group mb-3" id="button">
-                            <input type="text" class="form-control" placeholder="Adresse e-mail" aria-label="Adresse e-mail" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control" placeholder="Adresse e-mail"
+                                aria-label="Adresse e-mail" aria-describedby="basic-addon1">
                             <span class="mm"> Commencer > </span>
 
                         </div>
@@ -62,13 +62,14 @@
     <!-- end header -->
     <div class="ligne"></div>
 
-    <div class="card-1" data-aos="fade-left" data-aos-duration="3000">
+    <div class="card-1">
         <div class="desc-1">
             <h1>
                 Regardez Netflix sur votre TV.
             </h1>
             <p>
-                Regardez Netflix sur votre Smart TV, PlayStation, Xbox, Chromecast, Apple TV, lecteurs Blu-ray et bien plus.
+                Regardez Netflix sur votre Smart TV, PlayStation, Xbox, Chromecast, Apple TV, lecteurs Blu-ray et bien
+                plus.
             </p>
         </div>
 
@@ -80,7 +81,7 @@
     </div>
     <div class="ligne"></div>
 
-    <div class="card-0" data-aos="fade-right" data-aos-duration="3000">
+    <div class="card-0">
         <img src="img/mobile-0819.jpg" alt="Netflix TV" class="hideSmall">
 
         <div class="desc-0">
@@ -112,13 +113,14 @@
     <div class="ligne"></div>
 
 
-    <div class="card-3" data-aos="fade-left" data-aos-duration="3000">
+    <div class="card-3">
         <div class="desc-3">
             <h1>
                 Regardez Netflix sur votre TV.
             </h1>
             <p>
-                Regardez Netflix sur votre Smart TV, PlayStation, Xbox, Chromecast, Apple TV, lecteurs Blu-ray et bien plus.
+                Regardez Netflix sur votre Smart TV, PlayStation, Xbox, Chromecast, Apple TV, lecteurs Blu-ray et bien
+                plus.
             </p>
         </div>
 
@@ -129,7 +131,7 @@
     </div>
     <div class="ligne"></div>
 
-    <div class="card-2" data-aos="fade-right" data-aos-duration="3000">
+    <div class="card-2">
         <img src="img/jeunesse.png" alt="Netflix TV" style="padding-left: 80px;" class="hideSmall">
 
         <div class="desc-2">
@@ -137,7 +139,8 @@
                 Créez des profils pour les enfants.
             </h1>
             <p>
-                Les enfants découvrent de nouvelles aventures et retrouvent leurs personnages préférés dans un espace bien à eux, déjà inclus dans votre abonnement.
+                Les enfants découvrent de nouvelles aventures et retrouvent leurs personnages préférés dans un espace
+                bien à eux, déjà inclus dans votre abonnement.
             </p>
         </div>
 
@@ -148,92 +151,126 @@
     <div class="ligne"></div>
 
     <div class="container">
-        <div class="question" data-aos="fade-down" data-aos-duration="3000">
+        <div class="question">
             <h1>Foire aux questions</h1>
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                             Netflix, qu'est-ce que c'est ?
                         </button>
                     </h2>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <p>Netflix est un service de streaming qui propose une vaste sélection de séries TV, films, animes, documentaires et autres programmes primés sur des milliers d'appareils connectés à Internet.
+                            <p>Netflix est un service de streaming qui propose une vaste sélection de séries TV, films,
+                                animes, documentaires et autres programmes primés sur des milliers d'appareils connectés
+                                à Internet.
                             </p>
                             <p>
-                                Regardez tout ce que vous voulez, quand vous voulez, sans publicité et à un tarif mensuel très attractif. Découvrez de nouveaux films et séries TV chaque semaine, il y en a pour tous les goûts !
+                                Regardez tout ce que vous voulez, quand vous voulez, sans publicité et à un tarif
+                                mensuel très attractif. Découvrez de nouveaux films et séries TV chaque semaine, il y en
+                                a pour tous les goûts !
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                             Combien coûte Netflix ?
                         </button>
                     </h2>
-                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                        data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <p>Regardez Netflix sur votre smartphone, tablette, Smart TV, ordinateur ou appareil de streaming, le tout pour un tarif mensuel fixe. Les forfaits vont de 65 MAD à 125 MAD par mois. Pas de contrat ni de frais supplémentaires.</p>
+                            <p>Regardez Netflix sur votre smartphone, tablette, Smart TV, ordinateur ou appareil de
+                                streaming, le tout pour un tarif mensuel fixe. Les forfaits vont de 65 MAD à 125 MAD par
+                                mois. Pas de contrat ni de frais supplémentaires.</p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
                             Où puis-je regarder Netflix ?
                         </button>
                     </h2>
-                    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <p>Regardez où et quand vous voulez, sur un nombre illimité d'appareils. Connectez-vous à votre compte pour regarder Netflix en ligne sur netflix.com depuis votre ordinateur ou tout appareil connecté à Internet avec l'application
-                                Netflix, comme les Smart TV, smartphones, tablettes, lecteurs de streaming et consoles de jeu.
+                            <p>Regardez où et quand vous voulez, sur un nombre illimité d'appareils. Connectez-vous à
+                                votre compte pour regarder Netflix en ligne sur netflix.com depuis votre ordinateur ou
+                                tout appareil connecté à Internet avec l'application
+                                Netflix, comme les Smart TV, smartphones, tablettes, lecteurs de streaming et consoles
+                                de jeu.
                             </p>
                             <p>
-                                Vous pouvez aussi télécharger vos séries préférées avec l'application iOS, Android ou Windows 10. Téléchargez des titres pour les regarder sur votre appareil mobile, même sans connexion Internet. Emportez Netflix partout avec vous.
+                                Vous pouvez aussi télécharger vos séries préférées avec l'application iOS, Android ou
+                                Windows 10. Téléchargez des titres pour les regarder sur votre appareil mobile, même
+                                sans connexion Internet. Emportez Netflix partout avec vous.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingfour">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsefour" aria-expanded="false" aria-controls="flush-collapsefour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapsefour" aria-expanded="false"
+                            aria-controls="flush-collapsefour">
                             Comment puis-je annuler mon forfait ?
                         </button>
                     </h2>
-                    <div id="flush-collapsefour" class="accordion-collapse collapse" aria-labelledby="flush-headingfour" data-bs-parent="#accordionFlushExample">
+                    <div id="flush-collapsefour" class="accordion-collapse collapse" aria-labelledby="flush-headingfour"
+                        data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <p>Netflix offre une grande souplesse. Pas de contrat compliqué. Sans engagement. Deux clics suffisent pour annuler votre compte en ligne. Pas de frais d'annulation : ouvrez ou fermez votre compte à tout moment.
+                            <p>Netflix offre une grande souplesse. Pas de contrat compliqué. Sans engagement. Deux clics
+                                suffisent pour annuler votre compte en ligne. Pas de frais d'annulation : ouvrez ou
+                                fermez votre compte à tout moment.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingfive">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsefive" aria-expanded="false" aria-controls="flush-collapsefive">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapsefive" aria-expanded="false"
+                            aria-controls="flush-collapsefive">
                             Que puis-je regarder sur Netflix ?
                         </button>
                     </h2>
-                    <div id="flush-collapsefive" class="accordion-collapse collapse" aria-labelledby="flush-headingfive" data-bs-parent="#accordionFlushExample">
+                    <div id="flush-collapsefive" class="accordion-collapse collapse" aria-labelledby="flush-headingfive"
+                        data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <p> Netflix propose un vaste catalogue comprenant notamment des longs métrages, des documentaires, des séries TV, des animes et des programmes originaux Netflix primés. Regardez Netflix à volonté, quand vous le voulez.
+                            <p> Netflix propose un vaste catalogue comprenant notamment des longs métrages, des
+                                documentaires, des séries TV, des animes et des programmes originaux Netflix primés.
+                                Regardez Netflix à volonté, quand vous le voulez.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingsix">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsesix" aria-expanded="false" aria-controls="flush-collapsesix">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapsesix" aria-expanded="false" aria-controls="flush-collapsesix">
                             Est-ce que Netflix est adapté aux enfants ?
 
                         </button>
                     </h2>
-                    <div id="flush-collapsesix" class="accordion-collapse collapse" aria-labelledby="flush-headingsix" data-bs-parent="#accordionFlushExample">
+                    <div id="flush-collapsesix" class="accordion-collapse collapse" aria-labelledby="flush-headingsix"
+                        data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <p>Netflix Jeunesse est inclus dans votre abonnement et offre un meilleur contrôle aux parents, ainsi qu'un espace dédié aux enfants, avec des films et des séries destinés à toute la famille.
+                            <p>Netflix Jeunesse est inclus dans votre abonnement et offre un meilleur contrôle aux
+                                parents, ainsi qu'un espace dédié aux enfants, avec des films et des séries destinés à
+                                toute la famille.
                             </p>
-                            <p>Les profils Enfants comportent des fonctionnalités de contrôle parental avec code PIN permettant de modifier la catégorie d'âge des contenus que vos enfants peuvent regarder et de bloquer des titres spécifiques.
+                            <p>Les profils Enfants comportent des fonctionnalités de contrôle parental avec code PIN
+                                permettant de modifier la catégorie d'âge des contenus que vos enfants peuvent regarder
+                                et de bloquer des titres spécifiques.
                             </p>
                         </div>
                     </div>
@@ -241,7 +278,8 @@
             </div>
 
             <div class="go">
-                <p>Prêt à regarder Netflix ? Saisissez votre adresse e-mail pour vous abonner ou réactiver votre abonnement.
+                <p>Prêt à regarder Netflix ? Saisissez votre adresse e-mail pour vous abonner ou réactiver votre
+                    abonnement.
                 </p>
                 <!-- <div class="input-group mb-3" id="button">
                 <input type="text" class="form-control" placeholder="Adresse e-mail" aria-label="Adresse e-mail" aria-describedby="basic-addon1">
@@ -252,7 +290,8 @@
                 <span> Commencer ></span>
             </div> -->
                 <div class="input-group mb-3" id="button">
-                    <input type="text" class="form-control" placeholder="Adresse e-mail" aria-label="Adresse e-mail" aria-describedby="basic-addon1">
+                    <input type="text" class="form-control" placeholder="Adresse e-mail" aria-label="Adresse e-mail"
+                        aria-describedby="basic-addon1">
                     <span class="mm"> Commencer > </span>
 
                 </div>
@@ -265,7 +304,7 @@
     </div>
     <div class="ligne"></div>
     <footer>
-        <div data-aos="fade-up" data-aos-duration="3000">
+        <div>
             <p><a href="#">Des questions ? Contactez-nous</a></p>
             <div class="list big">
                 <ul>
@@ -317,12 +356,8 @@
             </div>
         </div>
     </footer>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/js.js"></script>
 </body>
 
